--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttps//www.malvernhills.gov.uk/">Malvern Hills District Council</a></li>
-<li><a href="https://www.gov.ukhttps//getintoteaching.education.gov.uk/">Get Into Teaching</a></li>
-<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.ballymena.gov.uk/">Ballymena Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.downdc.gov.uk">Down District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.eden.gov.uk/">Eden District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.chorley.gov.uk">Chorley Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.liverpool.gov.uk">Liverpool City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.dover.gov.uk">Dover District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.newark-sherwooddc.gov.uk">Newark and Sherwood District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.e-lindsey.gov.uk">East Lindsey District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.hertsmere.gov.uk/">Hertsmere Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hounslow.gov.uk">London Borough of Hounslow Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cheltenham.gov.uk">Cheltenham Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.carlisle.gov.uk">Carlisle City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.nottinghamshire.gov.uk">Nottinghamshire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.derby.gov.uk">Derby City Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
