--- a/apps/whitehall.html
+++ b/apps/whitehall.html
@@ -481,7 +481,6 @@
       </ul>
 </ul>
 <h2 id='example-pages-published-by-whitehall'>Example pages published by whitehall</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="https://www.gov.uk/government/organisations" class="govuk-link">Departments, agencies and public bodies</a></li>
       <li><a href="https://www.gov.uk/government/ministers" class="govuk-link">Ministers</a></li>
       <li><a href="https://www.gov.uk/world/embassies" class="govuk-link">Find a British embassy, high commission or consulate</a></li>
       <li><a href="https://www.gov.uk/government/people/boris-johnson" class="govuk-link">The Rt Hon Boris Johnson MP</a></li>
@@ -491,6 +490,7 @@
       <li><a href="https://www.gov.uk/government/people/grant-shapps" class="govuk-link">The Rt Hon Grant Shapps MP</a></li>
       <li><a href="https://www.gov.uk/government/ministers/prime-minister" class="govuk-link">Prime Minister</a></li>
       <li><a href="https://www.gov.uk/government/people/kwasi-kwarteng" class="govuk-link">The Rt Hon Kwasi Kwarteng MP</a></li>
+      <li><a href="https://www.gov.uk/government/ministers/solicitor-general" class="govuk-link">Solicitor General</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
